--- a/src/angular-pull-to-refresher.less
+++ b/src/angular-pull-to-refresher.less
@@ -52,7 +52,7 @@
   }
 }
 
-.content-view {
+.ptr-content {
   min-height: 100%;
   z-index: 20;
   -webkit-backface-visibility: hidden;
@@ -72,7 +72,6 @@
 .ptr-reset,
 .ptr-loading{
   .ptr{
-    height: 92px;
     transition: all .25s ease;
     .fa{
       display: none;
@@ -80,9 +79,9 @@
   }
   .loading{
     display: inline-block;
-    margin-top: 56px;
+    margin-top: 10px;
   }
-  .content-view{
+  .ptr-content{
     transition: all .25s ease;
     -webkit-transform: translate3d( 0, 0, 0 );
     transform: translate3d( 0, 0, 0 );
