--- a/src/angular-pull-to-refresher.less
+++ b/src/angular-pull-to-refresher.less
@@ -55,6 +55,7 @@
 .ptr-content {
   min-height: 100%;
   z-index: 20;
+  position: relative;
   -webkit-backface-visibility: hidden;
   -webkit-perspective: 1000;
 }
@@ -82,6 +83,7 @@
     margin-top: 10px;
   }
   .ptr-content{
+    top:42px;
     transition: all .25s ease;
     -webkit-transform: translate3d( 0, 0, 0 );
     transform: translate3d( 0, 0, 0 );
